--- a/project1/src/index.html
+++ b/project1/src/index.html
@@ -1,16 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="page">
-        <footer class="footer">
-            <div class="container"></div>
-        </footer>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/style.css" />
+		<title>coffeeroasters - home</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,700;1,400;1,700&family=Fraunces:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
+	</head>
+	<body>
+		<!-- Header  -->
+		<header class="header">
+			<div class="container">
+				<a class="logo-link" href="./index.html">
+					<img class="logo-link__image" src="img/logo.svg" alt="Logo image"/>
+				</a>
+
+				<!-- Nav  -->
+				<nav class="nav">
+					<ul class="nav__list">
+						<li class="nav__item">
+							<a class="nav__link nav__link--active" href="#">
+								home
+							</a>
+						</li>
+						<li class="nav__item">
+							<a class="nav__link" href="#"> about us </a>
+						</li>
+						<li class="nav__item">
+							<a class="nav__link" href="#"> create your plan </a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+
+		<!-- Main  -->
+		<main class="main">
+			<!-- Hero  -->
+
+			<section class="hero">
+				<div class="container">
+					<h1 class="hero__heading">Great coffee made simple.</h1>
+
+					<p class="hero__description">
+						Start your mornings with the world’s best coffees. Try
+						our expertly curated artisan coffees from our best
+						roasters delivered directly to your door, at your
+						schedule.
+					</p>
+
+					<a class="hero__link button" href="./create-your-plan.html" title="Create your plan">
+						Create your plan
+					</a>
+				</div>
+			</section>
+		</main>
+
+        <!-- collection -->
+        <div class="collection">
+            
+                
+            <div class="container">
+                <h1 class="collection__heading">our collection<h1/>
+                <div class="collection__inner">
+                    <div class="collection__block">
+                        <img src="img/gran_espresso.png" alt="Gran Espresso" class="collection__img">
+						<h3 class="collection__title">Gran Espresso</h3>
+						<p class="collection__p">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+                    </div>
+                    <div class="collection__block">
+                        <img src="img/planalto.png" alt="Planalto" class="collection__img">
+						<h3 class="collection__title">Planalto</h3>
+						<p class="collection__p">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+                    </div>
+                    <div class="collection__block">
+                        <img src="img/picollo.png" alt="Piccollo" class="collection__img">
+						<h3 class="collection__title">Piccollo</h3>
+						<p class="collection__p">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+                    </div>
+                    <div class="collection__block">
+                        <img src="img/gran_espresso.png" alt="Danche" class="collection__img">
+						<h3 class="collection__title">Danche</h3>
+						<p class="collection__p">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+		<!-- why we -->
+		<div class="why">
+			<div class="container">
+				<h2 class="why__title">Why choose us?</h2>
+				<p class="why__p">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
+				<div class="why__inner">
+					<div class="why__block">
+						<img src="img/coffee_bean.png" alt="coffee" class="block__icon">
+						<h3 class="block__title">Best quality</h3>
+						<p class="block__p">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+					</div>
+					<div class="why__block">
+						<img src="img/surprise.png" alt="coffee" class="block__icon">
+						<h3 class="block__title">Exclusive benefits</h3>
+						<p class="block__p">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+					</div>
+					<div class="why__block">
+						<img src="img/truck.png" alt="coffee" class="block__icon special">
+						<h3 class="block__title">Free shipping</h3>
+						<p class="block__p">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="h-i-w">
+			<div class="container">
+				<h2 class="h-i-w__title">How it works</h2>
+				<table class="h-i-w__table">
+					<tr class="table__row">
+						<td class="table__col"></td>
+						<td class="table__col"></td>
+						<td class="table__col"></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+
+		<footer class="footer">
+			<div class="container">
+				<div class="footer__inner">
+					<a class="logo-link" href="./index.html">
+						<img class="logo-link__image" src="img/logo_dark.svg" alt="Logo image"/>
+					</a>
+
+					<!-- Nav  -->
+					<nav class="nav">
+						<ul class="nav__list">
+							<li class="nav__item">
+								<a class="nav__link" href="#"> home </a>
+							</li>
+							<li class="nav__item">
+								<a class="nav__link" href="#"> about us </a>
+							</li>
+							<li class="nav__item">
+								<a class="nav__link" href="#">
+									create your plan
+								</a>
+							</li>
+						</ul>
+					</nav>
+
+					<!-- Socials  -->
+					<ul class="socials">
+						<li class="socials__item">
+							<a class="socials__link" href="#"
+								><img src="icons/facebook_logo.svg" alt="Social media icon"/>
+							</a>
+						</li>
+						<li class="socials__item">
+							<a class="socials__link" href="#">
+                                <img src="icons/twitter_logo.svg" alt="Social media icon"/>
+							</a>
+						</li>
+						<li class="socials__item">
+							<a class="socials__link" href="#">
+                                <img src="icons/instagram_logo.svg" alt="Social media icon"/>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
