--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index3.html
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index3.html
@@ -137,8 +137,51 @@
 				</ul>
 
 				<div class="selections">
-					
+					<div class="selection__configuration">
+						<h2 class="configuration__title">How do you drink your coffee?</h2>
+						<div class="configuration__inner">
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+						</div>
+					</div>
+					<div class="selection__configuration">
+						<h2 class="configuration__title">What type of coffee?</h2>
+						<div class="configuration__inner">
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+						</div>
+					</div>
+					<div class="selection__configuration">
+						<h2 class="configuration__title">How much would you like?</h2>
+						<div class="configuration__inner">
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+						</div>
+					</div>
+					<div class="selection__configuration">
+						<h2 class="configuration__title">Want us to grind them?</h2>
+						<div class="configuration__inner">
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+						</div>
+					</div>
+					<div class="selection__configuration">
+						<h2 class="configuration__title">How often should we deliver?</h2>
+						<div class="configuration__inner">
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+							<div class="configuration__block"></div>
+						</div>
+					</div>
 				</div>
+			</div>
+
+			<div class="summary">
+				
 			</div>
 		</div>
 
