--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index3.html
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index3.html
@@ -148,17 +148,26 @@
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4>Capsule</h4>
+												<p>Compatible with Nespresso systems and similar brewers</p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4>Filter</h4>
+												<p>For pour over or drip methods like Aeropress, Chemex, and V60</p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4>Espresso</h4>
+												<p>Dense and finely ground beans for an intense, flavorful experience</p>
+											</span>
 										</label>
 									</div>
 								</form>
@@ -169,17 +178,26 @@
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4>Single Origin</h4>
+												<p>Distinct, high quality coffee from a specific family-owned farm</p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4>Decaf</h4>
+												<p>Just like regular coffee, except the caffeine has been removed</p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4>Blended</h4>
+												<p>Combination of two or three dark roasted beans of organic coffees</p>
+											</span>
 										</label>
 									</div>
 								</form>
@@ -190,17 +208,26 @@
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4>250g</h4>
+												<p>Perfect for the solo drinker. Yields about 12 delicious cups.</p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4>500g</h4>
+												<p>Perfect option for a couple. Yields about 40 delectable cups.</p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4>1000g</h4>
+												<p></p>
+											</span>
 										</label>
 									</div>
 								</form>
@@ -211,17 +238,26 @@
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4></h4>
+												<p></p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4></h4>
+												<p></p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4></h4>
+												<p></p>
+											</span>
 										</label>
 									</div>
 								</form>
@@ -232,17 +268,26 @@
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4></h4>
+												<p></p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4></h4>
+												<p></p>
+											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
-											<span class="configuration__controller"></span>
+											<span class="configuration__controller">
+												<h4></h4>
+												<p></p>
+											</span>
 										</label>
 									</div>
 								</form>
