--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index3.html
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index3.html
@@ -226,7 +226,7 @@
 		
 											<span class="configuration__controller">
 												<h4>1000g</h4>
-												<p></p>
+												<p>Perfect for offices and events. Yields about 90 delightful cups.</p>
 											</span>
 										</label>
 									</div>
@@ -239,7 +239,7 @@
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
 											<span class="configuration__controller">
-												<h4></h4>
+												<h4>Wholebean</h4>
 												<p></p>
 											</span>
 										</label>
