--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index3.html
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index3.html
@@ -240,23 +240,23 @@
 		
 											<span class="configuration__controller">
 												<h4>Wholebean</h4>
-												<p></p>
+												<p>Best choice if you cherish the full sensory experience</p>
 											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
 											<span class="configuration__controller">
-												<h4></h4>
-												<p></p>
+												<h4>Filter</h4>
+												<p>For drip or pour-over coffee methods such as V60 or Aeropress</p>
 											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
 											<span class="configuration__controller">
-												<h4></h4>
-												<p></p>
+												<h4>Cafetiére</h4>
+												<p> Course ground beans specially suited for french press coffee</p>
 											</span>
 										</label>
 									</div>
@@ -269,24 +269,24 @@
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
 											<span class="configuration__controller">
-												<h4></h4>
-												<p></p>
+												<h4>Every week</h4>
+												<p>$7.20 per shipment. Includes free first-class shipping.</p>
 											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
 											<span class="configuration__controller">
-												<h4></h4>
-												<p></p>
+												<h4>Every 2 weeks</h4>
+												<p>$9.60 per shipment. Includes free priority shipping.</p>
 											</span>
 										</label>
 										<label class="configuration__label">
 											<input type="radio" class="block__choice visually-hidden" name="coffee__type">
 		
 											<span class="configuration__controller">
-												<h4></h4>
-												<p></p>
+												<h4>Every month</h4>
+												<p>$12.00 per shipment. Includes free priority shipping.</p>
 											</span>
 										</label>
 									</div>
