--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index.html
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index.html
@@ -15,7 +15,7 @@
 		<header class="header">
 			<div class="container">
 				<a class="logo-link" href="./index.html">
-					<img class="logo-link__image" src="img/Group-5.svg" srcset="img/Group-5.svg 1x, img/Group-5@2x.svg 2x" alt="Logo image"/>
+					<img class="logo-link__image" src="img/Group-5.svg" alt="Logo image"/>
 				</a>
 
 				<!-- Nav  -->
