--- a/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index.html
+++ b/scss_project-6b3d11aeb911af0f633ab5d17e1d19b0fe20636f/index.html
@@ -67,22 +67,22 @@
                 <h1 class="collection__heading">our collection<h1/>
                 <div class="collection__inner">
                     <div class="collection__block">
-                        <img src="img/gran_espresso.png" alt="Gran Espresso" class="collection__img">
+                        <img src="img/2x/expresso.png" srcset="img/2x/expresso.png 1x, img/2x/expresso@2x.png 2x" alt="Gran Espresso" class="collection__img">
 						<h3 class="collection__title">Gran Espresso</h3>
 						<p class="collection__p">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
                     </div>
                     <div class="collection__block">
-                        <img src="img/planalto.png" alt="Planalto" class="collection__img">
+                        <img src="img/2x/kopi2.png" srcset="img/2x/kopi2.png 1x, img/2x/kopi2@2x.png 2x" alt="Planalto" class="collection__img">
 						<h3 class="collection__title">Planalto</h3>
 						<p class="collection__p">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
                     </div>
                     <div class="collection__block">
-                        <img src="img/picollo.png" alt="Piccollo" class="collection__img">
+                        <img src="img/2x/kopi3.png" srcset="img/2x/kopi3.png 1x, img/2x/kopi3@2x.png 2x" alt="Piccollo" class="collection__img">
 						<h3 class="collection__title">Piccollo</h3>
 						<p class="collection__p">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
                     </div>
                     <div class="collection__block">
-                        <img src="img/gran_espresso.png" alt="Danche" class="collection__img">
+                        <img src="img/2x/expresso.png" srcset="img/2x/expresso.png 1x, img/2x/expresso@2x.png 2x" alt="Danche" class="collection__img">
 						<h3 class="collection__title">Danche</h3>
 						<p class="collection__p">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
                     </div>
@@ -97,17 +97,17 @@
 				<p class="why__p">A large part of our role is choosing which particular coffees will be featured in our range. This means working closely with the best coffee growers to give you a more impactful experience on every level.</p>
 				<div class="why__inner">
 					<div class="why__block">
-						<img src="img/coffee_bean.png" alt="coffee" class="block__icon">
+						<img src="img/2x/coffee-bean.png" srcset="img/2x/coffee-bean.png 1x, img/2x/coffee-bean@2x.png 2x" alt="coffee" class="block__icon">
 						<h3 class="block__title">Best quality</h3>
 						<p class="block__p">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
 					</div>
 					<div class="why__block">
-						<img src="img/surprise.png" alt="coffee" class="block__icon">
+						<img src="img/2x/surprise.png" srcset="img/2x/surprise.png 1x, img/2x/surprise@2x.png 2x" alt="coffee" class="block__icon">
 						<h3 class="block__title">Exclusive benefits</h3>
 						<p class="block__p">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
 					</div>
 					<div class="why__block">
-						<img src="img/truck.png" alt="coffee" class="block__icon special">
+						<img src="img/2x/truck.png" srcset="img/2x/truck@.png 1x, img/2x/truck@2x.png 2x" alt="coffee" class="block__icon special">
 						<h3 class="block__title">Free shipping</h3>
 						<p class="block__p">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
 					</div>
